labs/examples/design-patterns-examples/src/com/examples/design/solid/o/good/Shape.java
package com.examples.design.solid.o.good;

public abstract class Shape {
    abstract void draw();
}
