labs/examples/design-patterns-examples/src/com/examples/design/solid/o/bad/Shape.java
package com.examples.design.solid.o.bad;

public class Shape {
    int m_type;
}
